# AIRunningAssistant

./: .env.example  .gitignore  CLAUDE.md  Procfile  README.md  SETUP.md  pyproject.toml  requirements.txt  runner.md  runners.json.example
.claude/: settings.json  settings.local.json
app/: cache.py  config.py  main.py  pipeline.py  weather.py
app/agents/: running_coach.py
app/notifications/: whatsapp.py
app/sheets/: client.py
app/strava/: client.py
data/: last_processed.json
logs/: issues.md
tests/: conftest.py  test_agents.py  test_cache.py  test_integration.py  test_main.py  test_notifications.py  test_pipeline.py  test_sheets.py  test_strava.py  test_weather.py
