[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:BuildBackend"

[project]
name = "ai-running-assistant"
version = "0.1.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: hits real external APIs — requires credentials (run with -m integration)",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
